--- a/css/style.css
+++ b/css/style.css
@@ -27,118 +27,6 @@ a {
   display: none;
 }
 
-@media screen and (max-width: 1199px) {
-	.menu-burger {
-		display: block;
-		width: 1.25em;
-		height: 1em;  
-		border: none;
-		padding: 0;
-		background-color: transparent;
-		font-size: 20px;
-		position: relative;
-		text-indent: -9999px;
-		cursor: pointer;
-	}
-	.menu-burger:hover,
-	.menu-burger:focus {
-	border: none;
-	outline: 1px solid #b59f5b;
-	outline-offset: 10px;
-}
-	.menu-burger:before, .menu-burger:after {
-		content:"";
-		width: 100%;
-		height: 20%;
-		border-radius: 5px;
-		background-color: #ffffff;  
-		position: absolute;
-		left: 0;
-	}
-	.menu-burger:before {
-		top: 0;
-	}
-	.menu-burger:after {
-		bottom: 0;
-	}
-	.menu-burger-label {
-		width: 100%;
-		height: 20%;
-		margin-top: -0.1em;  
-		border-radius: 5px;
-		background-color: #ffffff;  
-		position: absolute;
-		left: 0;
-		top: 50%;
-	}
-}
-
-@media screen and (min-width: 641px) and (max-width: 1199px) {
-	.header {
-		padding: 40px 0 125px;
-		background-image: url("../images/banner-bg-tablet.jpg");
-	}
-	.container {
-		width: 91%;
-		padding-left: 0;
-		padding-right: 0;
-	}
-	.menu-logo {
-		width: 160px;
-	}
-	.menu-list-item {
-		display: none;
-	}
-	.header-title {
-		width: 89%;
-		max-width: 700px;
-		margin: 105px auto 0 auto;
-		font-size: 40px;
-		line-height: 1.375;
-	}
-}
-
-@media screen and (max-width: 640px) {
-	.header {
-		min-height: 640px;
-		padding: 30px 0 220px;
-		background-image: url("../images/banner-mobile.jpg");
-	}
-	.container {
-		width: 91%;
-		padding-left: 0;
-		padding-right: 0;
-	}
-	.header-top-block {
-		justify-content: flex-end;
-	}
-	.logo {
-		display: none;
-	}
-	.menu-list-item {
-		display: none;
-	}
-	.logo-mobile {
-		display: block;
-		text-align: center;
-		width: 75%;
-		margin: 175px auto 0 auto;
-	}
-	.logo-mobile:hover,
-	.logo-mobile:focus {
-	border: none;
-	outline: 1px solid #b59f5b;
-	outline-offset: 10px;
-}
-	.header-title {
-		width: 75%;
-		max-width: 270px;
-		margin: 45px auto 0 auto;
-		font-size: 26px;
-		line-height: 1.38;
-	}
-}
-
 .header {
   padding: 30px 0 125px;
   background-image: url(../images/banner-bg.jpg);
@@ -165,9 +53,9 @@ a {
 }
 
 .container {
-  width: 85%;
+  width: 83%;
   max-width: 1200px;
-  padding-left: 1%;
+  padding-left: 2%;
   padding-right: 2%;
   margin: 0 auto;
 }
@@ -190,18 +78,25 @@ a {
   font-weight: 400;
   font-family: "Open Sans";
   text-align: center;
-  
  }
 
 .menu-list-item {
   list-style-type: none;
-  padding-left: 35px;
+  margin-left: 35px;
+}
+
+.menu-list-item:first-child {
+	margin-left: 0;
 }
 
 .menu-link {
   text-decoration: none;
   color: white;
 }
+
+.menu-link:hover {
+	color: #b59f5b;
+ }
 
 .header-title {
 	width: 690px; 
@@ -246,9 +141,18 @@ a {
   color: #000000;
 }
 
+.category {
+	display: flex;
+	justify-content: flex-start;
+  }
+  
+  .category-part a {
+	text-decoration: none;
+	color: #b59f5b;
+  }
+
 .category-part {
   font-size: 14px;
-  line-height: 40px;
   text-transform: uppercase;
   color: #b59f5b;
   font-weight: 700;
@@ -257,20 +161,31 @@ a {
   margin-right: 19px;
 }
 
+.category-part:last-child {
+	margin-right: 0px;
+}
+
 .category-part:hover {
-  font-size: 14px;
-  line-height: 40px;
   text-decoration: underline;
-  text-transform: uppercase;
-  color: #b59f5b;
-  font-weight: 700;
-  font-family: "Open Sans";
 }
 
 .data-author {
   display: flex;
   
 }
+
+.main-aside {
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+	margin-left: auto;
+	margin-right: auto;
+  }
+  
+  .post-list {
+	flex-grow: 1;
+	margin-right: 125px;
+  }
 
 .post-author {
   font-size: 12px;
@@ -290,8 +205,6 @@ a {
 }
 
 .post-text {
-  width: 367px;
-  height: 62px;
   font-size: 15px;
   line-height: 22px;
   color: #0f0d0e;
@@ -316,16 +229,6 @@ a {
 
 .post-content {
   margin-left: 30px;
-}
-
-.category {
-  display: flex;
-  justify-content: flex-start;
-}
-
-.category-part a {
-  text-decoration: none;
-  color: #b59f5b;
 }
 
 .section-title {
@@ -355,113 +258,6 @@ a {
   margin-top: 60px;
   width: 270px;
   flex-shrink: 0;
-}
-
-.main-aside {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.post-list {
-  flex-grow: 1;
-  margin-right: 125px;
-}
-
-@media screen and (min-width: 641px) and (max-width: 1199px) {
-.post {
-   flex-direction: column;
-   margin-top: 10px;
-   
-}
-.post:after {
-	content: "";
-	display: block;
-	margin-top: 40px;
-	margin-bottom: 40px;
-	width: 75%;
-	height: 3px;
-	background-color: rgba(122, 122, 122, 0.2);
-}
-
-.post:last-child::after {
-	display: none;
-}
-.post-header {
-	width: 70%;
-}
-.post-list {
-	width: 50%;
-	margin-left: auto;
-	margin-right: auto;
-}
-.main-aside {
-	width: 100%;
-	justify-content: center;
-	box-sizing: border-box;
-	margin-top: 35px;
-}
-.sidebar {
-	width: 35%;
-	margin-top: 0px;
-	padding-left: 0px;
-	margin-left: auto;
-	margin-right: auto;
-}
-.reference {
-	width: 100%;
-
-}
-
-.products {
-	margin-top: 40px;
-}
-
-.product-block {
-	min-width: 48%;
-}
-
-.product-block:nth-child(3) {
-	margin-top: 25px;
-}
-}
-
-@media screen and (max-width: 640px) {
-	.main-aside {
-		flex-direction: column;
-	}
-
-	.post-list {
-		margin: auto;
-	}
-
-	.post {
-		width: 90%;
-		flex-direction: column;
-		align-items: center;
-		padding: auto;
-	}
-
-	.post:after {
-		content: "";
-		display: block;
-		margin-top: 40px;
-		margin-bottom: 40px;
-		width: 90%;
-		height: 3px;
-		background-color: rgba(122, 122, 122, 0.2);
-	}
-
-	.sidebar {
-		width: 100%;
-	}
-
-	.product-block {
-		min-width: 100%;
-		margin-top: 25px;
-	}
 }
 
 .side-post-header {
@@ -538,6 +334,7 @@ a {
   height: 48px;
   background-color: #f4f7f6;
   padding-left: 20px;
+  padding-right: 20px;
   border: none;
 }
 
@@ -582,6 +379,7 @@ a {
   height: 48px;
   background-color: #f4f7f6;
   padding-left: 20px;
+  padding-right: 20px;
   border: none;
 }
 
@@ -618,16 +416,14 @@ a {
 }
 
 .section-tegs-btn {
+  display: block;
   font-size: 12px;
-  line-height: 40px;
   text-transform: uppercase;
   color: #0f0d0e;
   font-weight: 700;
   font-family: "Open Sans";
   text-decoration: none;
   padding: 6px 15px;
-  width: 86px;
-  height: 30px;
   background-color: rgba(244,243,241,0);
   border: 3px solid #eeeeee;
 }
@@ -751,23 +547,6 @@ a {
   background-color: white;
 }
 
-@media screen and (min-width: 641px) and (max-width: 1199px) {
-	.pop-up-container {
-		width: 50%;
-	}
-	.form-textarea {
-		min-height: 50px;
-	}
-}
-@media screen and (max-width: 640px) {
-	.pop-up-container {
-		width: 90%;
-	}
-	.form-textarea {
-		min-height: 0px;
-	}
-}
-
 .feedback {
   font-size: 12px;
 }
@@ -869,6 +648,9 @@ a {
 
 .popup-close {
 	position: absolute;
+	background-image: url(../svg/form-x.svg);
+	background-repeat: no-repeat;
+	background-position: center center;
 	top: -20px;
 	right: 0;
 	width: 15px;
@@ -878,7 +660,6 @@ a {
 }
 
 .trends {
-	max-width: 1660px;
 	margin: 60px auto 0 auto;
 }
 
@@ -906,11 +687,12 @@ a {
 }
 
 .trends-block-item {
-  display: flex;
+    display: flex;
 	align-items: flex-end;
 	width: calc(25% - 4px);
+	min-height: 310px;
 	flex-grow: 1;
-	padding: 9% 20px 20px; /*9% - чтобы при уменьшее экрана от 1660 к 1200, padding-top уменьшался*/
+	padding: 20px 20px 20px; 
 	margin-right: 4px;
 	margin-bottom: 4px;
 	background-color: #1c2141;
@@ -980,60 +762,6 @@ a {
 .trends-title-link:focus {
 	color: #b59f5b;
 	outline: none;
-}
-
-@media screen and (min-width: 641px) and (max-width: 1199px) {
-	.trends {
-		margin-top: 50px;
-	}
-	.section-title {
-		font-size: 18px;
-	}
-	.section-title::after {
-		margin: 15px auto 20px auto;
-	}
-	.trends-item {
-		padding: 35px 60px 35px 30px;
-	}
-	.trends-title-link {
-		font-size: 17px;
-	}
-}
-@media screen and (min-width: 641px) and (max-width: 1199px) {
-	.trends-block-item {
-		width: calc(50% - 4px);
-	}
-	.trends-block-item:last-child {
-		width: calc(50% - 4px);
-	}
-	.trends-block-item:nth-child(even) {
-		margin-right: 0;
-	}
-}
-
-@media screen and (max-width: 640px) {
-	.trends {
-		margin-top: 45px;
-	}
-	.section-title {
-		font-size: 16px;
-	}
-	.section-title::after {
-		margin: 12px auto 25px auto;
-	}
-	.trends-item {
-		padding: 30px 30px 30px 20px;
-	}
-	.trends-title-link {
-		font-size: 17px;
-	}
-}
-@media screen and (max-width: 640px) {
-	.trends-block-item {
-		width: 100%;
-		margin-right: 0;
-		margin-bottom: 3px;
-	}
 }
 
 .products {
@@ -1141,3 +869,293 @@ a {
   outline: 2px solid #b59f5b;
 }
 
+@media screen and (max-width: 1199px) {
+	.menu-burger {
+		display: block;
+		width: 1.25em;
+		height: 1em;  
+		border: none;
+		padding: 0;
+		background-color: transparent;
+		font-size: 20px;
+		position: relative;
+		text-indent: -9999px;
+		cursor: pointer;
+	}
+	.menu-burger:hover,
+	.menu-burger:focus {
+	border: none;
+	outline: 1px solid #b59f5b;
+	outline-offset: 10px;
+}
+	.menu-burger:before, .menu-burger:after {
+		content:"";
+		width: 100%;
+		height: 20%;
+		border-radius: 5px;
+		background-color: #ffffff;  
+		position: absolute;
+		left: 0;
+	}
+	.menu-burger:before {
+		top: 0;
+	}
+	.menu-burger:after {
+		bottom: 0;
+	}
+	.menu-burger-label {
+		width: 100%;
+		height: 20%;
+		margin-top: -0.1em;  
+		border-radius: 5px;
+		background-color: #ffffff;  
+		position: absolute;
+		left: 0;
+		top: 50%;
+	}
+}
+
+@media screen and (min-width: 641px) and (max-width: 1199px) {
+	.header {
+		padding: 40px 0 125px;
+		background-image: url("../images/banner-bg-tablet.jpg");
+	}
+	.container {
+		width: 85%;
+		padding-left: 0;
+		padding-right: 0;
+	}
+
+	.menu-logo {
+		width: 160px;
+	}
+	.menu-list-item {
+		display: none;
+	}
+	.header-title {
+		width: 89%;
+		max-width: 700px;
+		margin: 105px auto 0 auto;
+		font-size: 40px;
+		line-height: 1.375;
+	}
+}
+
+@media screen and (max-width: 640px) {
+	.header {
+		min-height: 640px;
+		padding: 30px 0 220px;
+		background-image: url("../images/banner-mobile.jpg");
+	}
+	.container {
+		width: 91%;
+		padding-left: 0;
+		padding-right: 0;
+	}
+
+	.header-top-block {
+		justify-content: flex-end;
+	}
+	
+	.menu-list-item {
+		display: none;
+	}
+	.menu-logo {
+		display: block;
+		text-align: center;
+		width: 75%;
+		margin: 175px auto 0 auto;
+	}
+	.menu-logo:hover,
+	.menu-logo:focus {
+	border: none;
+	outline: 1px solid #b59f5b;
+	outline-offset: 10px;
+}
+
+	.header-title {
+		width: 75%;
+		margin: 45px auto 0 auto;
+		font-size: 36px;
+		line-height: 1.38;
+	}
+}
+
+@media screen and (min-width: 641px) and (max-width: 1199px) {
+	
+	.post {
+	   flex-direction: column;
+	   margin-top: 10px;
+	}
+
+	.post:after {
+		content: "";
+		display: block;
+		margin-top: 40px;
+		margin-bottom: 40px;
+		width: 95%;
+		height: 3px;
+		background-color: rgba(122, 122, 122, 0.2);
+	}
+	
+	.post:last-child::after {
+		display: none;
+	}
+	.post-header {
+		width: 70%;
+	}
+	.post-list {
+		width: 50%;
+		margin-left: 4%;
+		margin-right: auto;
+	}
+
+	.post-content {
+		margin-top: 10px;
+	}
+
+	.post-text {
+		width: 80%;
+	}
+
+	.main-aside {
+		width: 100%;
+		justify-content: center;
+		box-sizing: border-box;
+		margin-top: 35px;
+	}
+	.sidebar {
+		width: 35%;
+		margin-top: 0px;
+		padding-left: 0px;
+		margin-left: auto;
+		margin-right: 4%;
+	}
+	.reference {
+		width: 100%;
+	
+	}
+	
+	.products {
+		margin-top: 40px;
+	}
+	
+	.product-block {
+		min-width: 48%;
+	}
+	
+	.product-block:nth-child(3) {
+		margin-top: 25px;
+	}
+	}
+	
+	@media screen and (max-width: 640px) {
+		.main-aside {
+			flex-direction: column;
+		}
+	
+		.post-list {
+			margin: auto;
+		}
+	
+		.post {
+			width: 80%;
+			flex-direction: column;
+			align-items: center;
+			margin-left: 10%;
+		}
+
+		.post-content {
+			margin-top: 10px;
+		}
+	
+		.post:after {
+			content: "";
+			display: block;
+			margin-top: 40px;
+			margin-bottom: 5px;
+			width: 90%;
+			height: 3px;
+			background-color: rgba(122, 122, 122, 0.2);
+		}
+	
+		.sidebar {
+			width: 100%;
+		}
+	
+		.product-block {
+			min-width: 100%;
+			margin-top: 25px;
+		}
+	}
+
+	@media screen and (min-width: 641px) and (max-width: 1199px) {
+		.pop-up-container {
+			width: 50%;
+		}
+		.form-textarea {
+			min-height: 50px;
+		}
+	}
+	@media screen and (max-width: 640px) {
+		.pop-up-container {
+			width: 90%;
+		}
+		.form-textarea {
+			min-height: 0px;
+		}
+	}
+
+	@media screen and (min-width: 641px) and (max-width: 1199px) {
+		.trends {
+			margin-top: 50px;
+		}
+		.section-title {
+			font-size: 18px;
+		}
+		.section-title::after {
+			margin: 15px auto 20px auto;
+		}
+		.trends-item {
+			padding: 35px 60px 35px 30px;
+		}
+		.trends-title-link {
+			font-size: 17px;
+		}
+	}
+	@media screen and (min-width: 641px) and (max-width: 1199px) {
+		.trends-block-item {
+			width: calc(50% - 4px);
+		}
+		.trends-block-item:last-child {
+			width: calc(50% - 4px);
+		}
+		.trends-block-item:nth-child(even) {
+			margin-right: 0;
+		}
+	}
+	
+	@media screen and (max-width: 640px) {
+		.trends {
+			margin-top: 45px;
+		}
+		.section-title {
+			font-size: 16px;
+		}
+		.section-title::after {
+			margin: 12px auto 25px auto;
+		}
+		.trends-item {
+			padding: 30px 30px 30px 20px;
+		}
+		.trends-title-link {
+			font-size: 17px;
+		}
+	}
+	@media screen and (max-width: 640px) {
+		.trends-block-item {
+			width: 100%;
+			margin-right: 0;
+			margin-bottom: 3px;
+		}
+	}
